--- a/app/src/main/res/drawable/ic_baseline_keyboard_arrow_right_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_keyboard_arrow_right_24.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M11,18L11,6l-8.5,6 8.5,6zM11.5,12l8.5,6L20,6l-8.5,6z" />
+        android:pathData="M8.59,16.59L13.17,12 8.59,7.41 10,6l6,6 -6,6 -1.41,-1.41z" />
 </vector>
