--- a/app/src/main/res/layout-port/download.xml
+++ b/app/src/main/res/layout-port/download.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/download_layout_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,8 +14,7 @@
         <ViewFlipper
             android:id="@+id/download_playlist_flipper"
             android:layout_width="fill_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:id="@+id/download_album_art_layout"
@@ -26,19 +26,19 @@
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1">
+                    android:layout_weight="12">
 
                     <FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
                         android:orientation="vertical">
 
                         <xyz.slapelachie.supersonic.view.RecyclingImageView
                             android:id="@+id/download_album_art_image"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal|top"
-                            android:scaleType="fitCenter" />
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop" />
 
                         <LinearLayout
                             android:id="@+id/download_overlay_buttons"
@@ -80,14 +80,16 @@
                                 style="@style/DownloadActionImageButton"
                                 android:src="@drawable/action_toggle_list_dark" />
                         </LinearLayout>
+
+
                     </FrameLayout>
                 </FrameLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="75dp"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/download_song_title"
@@ -112,26 +114,36 @@
                         android:textColor="?android:textColorSecondary" />
                 </LinearLayout>
 
+                <include
+                    layout="@layout/download_slider"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
 
-                <include layout="@layout/download_slider" />
+                <include
+                    layout="@layout/download_media_buttons"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3" />
+
+                <TextView
+                    android:id="@+id/download_position_index"
+                    style="?attr/actionbarSubtitleStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="16dp"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:textColor="?android:textColorSecondary"
+                    android:textStyle="bold" />
+
+
             </LinearLayout>
 
             <include layout="@layout/download_playlist" />
 
         </ViewFlipper>
-
-        <include layout="@layout/download_media_buttons" />
-
-        <TextView
-            android:id="@+id/download_position_index"
-            style="?attr/actionbarSubtitleStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:singleLine="true"
-            android:textColor="?android:textColorSecondary"
-            android:layout_marginBottom="16dp"
-            android:textStyle="bold" />
 
     </LinearLayout>
 </FrameLayout>
