--- a/app/src/main/res/layout/download_media_buttons.xml
+++ b/app/src/main/res/layout/download_media_buttons.xml
@@ -1,94 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="50dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_gravity="center_horizontal"
+    android:gravity="center">
 
     <ImageButton
         android:id="@+id/download_repeat"
         style="@style/PlaybackControl"
-        android:layout_width="40dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:src="?attr/media_button_repeat_off" />
 
-    <xyz.slapelachie.supersonic.view.AutoRepeatButton
-        android:id="@+id/download_previous"
-        style="@style/PlaybackControl.Small"
-        android:layout_width="40dp"
+
+    <ImageButton
+        android:id="@id/download_previous"
+        style="@style/PlaybackControl"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="40dp"
         android:layout_centerVertical="true"
-        android:layout_marginRight="25dp"
-        android:layout_toLeftOf="@+id/download_pause"
         android:src="?attr/media_button_backward" />
 
-    <xyz.slapelachie.supersonic.view.AutoRepeatButton
-        android:id="@+id/download_rewind"
-        style="@style/PlaybackControl.Large"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_toLeftOf="@+id/download_pause"
-        android:src="?attr/media_button_rewind"
-        android:visibility="invisible" />
-
-    <ImageButton
-        android:id="@+id/download_pause"
-        style="@style/PlaybackControl.Large"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerInParent="true"
-        android:src="?attr/media_button_pause"
-        android:visibility="invisible" />
-
-    <ImageButton
-        android:id="@+id/download_stop"
-        style="@style/PlaybackControl.Large"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerInParent="true"
-        android:src="?attr/media_button_stop"
-        android:visibility="invisible" />
 
     <ImageButton
         android:id="@+id/download_start"
         style="@style/PlaybackControl.Large"
-        android:layout_width="40dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="40dp"
         android:layout_centerInParent="true"
         android:src="?attr/media_button_start" />
 
-    <xyz.slapelachie.supersonic.view.AutoRepeatButton
-        android:id="@+id/download_fastforward"
-        style="@style/PlaybackControl.Large"
-        android:layout_width="40dp"
+    <ImageButton
+        android:id="@id/download_next"
+        style="@style/PlaybackControl"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="40dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="25dp"
-        android:layout_toRightOf="@+id/download_start"
-        android:src="?attr/media_button_fastforward"
-        android:visibility="invisible" />
-
-    <xyz.slapelachie.supersonic.view.AutoRepeatButton
-        android:id="@+id/download_next"
-        style="@style/PlaybackControl.Small"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="25dp"
-        android:layout_toRightOf="@+id/download_start"
         android:src="?attr/media_button_forward" />
+
 
     <ImageButton
         android:id="@+id/download_shuffle"
         style="@style/PlaybackControl"
-        android:layout_width="40dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:src="?attr/shuffle_button" />
-</RelativeLayout>
+</LinearLayout>
