--- a/app/src/main/res/layout/song_list_item.xml
+++ b/app/src/main/res/layout/song_list_item.xml
@@ -1,142 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:id="@id/drag_handle"
-		android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="?android:attr/listPreferredItemHeight"
-		android:background="?attr/selectableItemBackground">
+    android:id="@id/drag_handle"
+    android:layout_width="fill_parent"
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:background="?attr/selectableItemBackground"
+    android:orientation="horizontal">
 
-    <LinearLayout android:orientation="vertical"
-                  android:layout_width="0dip"
-                  android:layout_height="wrap_content"
-                  android:layout_weight="1"
-                  android:layout_gravity="center_vertical">
+    <TextView
+        android:id="@+id/song_track"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|center_vertical"
+        android:drawablePadding="6dip"
+        android:paddingLeft="12dip"
+        android:paddingRight="12dip"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="?android:textColorPrimary" />
 
-        <LinearLayout android:orientation="horizontal"
-                      android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_gravity="center_vertical">
+    <LinearLayout
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-			<TextView
-				android:id="@+id/song_track"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="left|top"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:textColor="?android:textColorPrimary"
-				android:paddingLeft="6dip"
-				android:paddingRight="6dip"
-				android:drawablePadding="6dip"/>
 
-            <TextView
-				android:id="@+id/song_title"
-				android:layout_width="0dip"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:layout_gravity="left|top"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:singleLine="true"
-				android:ellipsize="marquee"
-				android:paddingLeft="6dip"
-				android:paddingRight="6dip"
-				android:drawablePadding="6dip"
-				android:textColor="?android:textColorPrimary"/>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
 
-			<ImageButton
-				android:id="@+id/song_bookmark"
-				android:layout_width="@dimen/SongStatusIcon"
-				android:layout_height="@dimen/SongStatusIcon"
-				android:layout_gravity="right|top"
-				android:background="@null"
-				android:focusable="false"
-				android:scaleType="fitCenter"
-				android:visibility="gone"/>
-					
-			<ImageButton
-				android:id="@+id/song_star"
-				android:layout_width="@dimen/Star.Small"
-				android:layout_height="@dimen/Star.Small"
-				android:scaleType="fitCenter"
-				android:layout_gravity="right|top"
-				android:background="@null"
-				android:focusable="false"
-				android:visibility="gone"/>
-
-			<ImageButton
-				android:id="@+id/song_played"
-				android:layout_width="@dimen/SongStatusIcon"
-				android:layout_height="@dimen/SongStatusIcon"
-				android:scaleType="fitCenter"
-				android:layout_gravity="right|top"
-				android:background="@null"
-				android:focusable="false"
-				android:visibility="gone"/>
 
             <TextView
-				android:id="@+id/song_status"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="right|top"
-				android:drawablePadding="1dip"
-				android:paddingRight="2dip"/>
+                android:id="@+id/song_title"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|top"
+                android:layout_weight="1"
+                android:drawablePadding="6dip"
+                android:ellipsize="marquee"
+                android:paddingLeft="6dip"
+                android:paddingRight="6dip"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="?android:textColorSecondary" />
 
-			<ImageView
-				android:id="@+id/song_status_icon"
-				android:layout_width="@dimen/SongStatusIcon"
-				android:layout_height="@dimen/SongStatusIcon"
-				android:layout_gravity="top"
-				android:src="?attr/downloading"
-				android:visibility="gone"/>
+            <ImageButton
+                android:id="@+id/song_bookmark"
+                android:layout_width="@dimen/SongStatusIcon"
+                android:layout_height="@dimen/SongStatusIcon"
+                android:layout_gravity="right|top"
+                android:background="@null"
+                android:focusable="false"
+                android:scaleType="fitCenter"
+                android:visibility="gone" />
+
+            <ImageButton
+                android:id="@+id/song_star"
+                android:layout_width="@dimen/Star.Small"
+                android:layout_height="@dimen/Star.Small"
+                android:layout_gravity="right|top"
+                android:background="@null"
+                android:focusable="false"
+                android:scaleType="fitCenter"
+                android:visibility="gone" />
+
+            <ImageButton
+                android:id="@+id/song_played"
+                android:layout_width="@dimen/SongStatusIcon"
+                android:layout_height="@dimen/SongStatusIcon"
+                android:layout_gravity="right|top"
+                android:background="@null"
+                android:focusable="false"
+                android:scaleType="fitCenter"
+                android:visibility="gone" />
+
+
         </LinearLayout>
 
         <LinearLayout
-			android:id="@+id/song_bottom"
-			android:orientation="horizontal"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_gravity="center_vertical">
+            android:id="@+id/song_bottom"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/song_status_download"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical" />
+
+            <ImageView
+                android:id="@+id/song_status_icon"
+                android:layout_width="@dimen/SongStatusIcon"
+                android:layout_height="@dimen/SongStatusIcon"
+                android:layout_gravity="center_vertical"
+                android:src="?attr/downloading"
+                android:visibility="gone" />
 
             <TextView
-                    android:id="@+id/song_artist"
-                    android:layout_width="0dip"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_gravity="left|center_vertical"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:singleLine="true"
-                    android:ellipsize="middle"
-                    android:paddingLeft="6dip"
-					android:textColor="?android:textColorSecondary"/>
-
-			<RatingBar
-				android:id="@+id/song_rating"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:isIndicator="true"
-				android:layout_centerHorizontal="true"
-				android:numStars="5"
-				style="@android:style/Widget.Holo.RatingBar.Small"
-				android:visibility="gone"/>
+                android:id="@+id/song_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:drawablePadding="1dip"
+                android:paddingRight="2dip" />
 
             <TextView
-                    android:id="@+id/song_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right|center_vertical"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:singleLine="true"
-                    android:paddingLeft="3dip"
-                    android:paddingRight="4dip"
-					android:textColor="?android:textColorSecondary"/>
+                android:id="@+id/song_artist"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_weight="1"
+                android:ellipsize="middle"
+                android:paddingLeft="6dip"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="?android:textColorSecondary" />
+
+            <RatingBar
+                android:id="@+id/song_rating"
+                style="@android:style/Widget.Holo.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/song_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:paddingLeft="3dip"
+                android:paddingRight="4dip"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="?android:textColorSecondary" />
 
         </LinearLayout>
     </LinearLayout>
-	
-	<ImageView
-		android:id="@+id/item_more"
-		android:src="?attr/download_none"
-		android:layout_width="wrap_content"
-		android:layout_height="fill_parent"
-		android:layout_gravity="right|center_vertical"
-		style="@style/MoreButton"/>
+
+    <ImageView
+        android:id="@+id/item_more"
+        style="@style/MoreButton"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_gravity="right|center_vertical"
+        android:src="?attr/download_none" />
 </LinearLayout>
