--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,6 +11,7 @@
 	<attr name="media_button_repeat_all" format="reference"/>
     <attr name="media_button_start" format="reference"/>
     <attr name="media_button_stop" format="reference"/>
+	<attr name="media_button_temp" format="reference"/>
 	<attr name="actionbar_backward" format="reference"/>
 	<attr name="actionbar_forward" format="reference"/>
 	<attr name="actionbar_pause" format="reference"/>
