--- a/app/src/main/res/layout/download_slider.xml
+++ b/app/src/main/res/layout/download_slider.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/download_slider"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    android:paddingLeft="15dip"
-    android:paddingRight="15dip"
-    android:paddingBottom="10dip">
+    android:background="@android:color/transparent">
 
     <TextView
         android:id="@+id/download_position"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:gravity="center"
         android:paddingBottom="4dip"
         android:text="0:00"
         android:textColor="?android:textColorPrimary"
@@ -21,23 +18,22 @@
 
     <SeekBar
         android:id="@+id/download_progress_bar"
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:indeterminate="false"
-        android:paddingLeft="55dip"
-        android:paddingTop="3dip"
-        android:paddingRight="55dip"
-        android:paddingBottom="7dip" />
+        android:layout_weight="5"
+        android:paddingBottom="4dp"
+        android:paddingTop="4dp"
+        android:layout_gravity="center"
+        android:indeterminate="false" />
 
     <TextView
         android:id="@+id/download_duration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:gravity="center"
         android:paddingBottom="4dip"
         android:text="-:--"
         android:textColor="?android:textColorPrimary"
         android:textSize="12sp" />
-</RelativeLayout>
+</LinearLayout>
