--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
 		<item name="media_button_repeat_all">@drawable/media_repeat_all_light</item>
 		<item name="media_button_start">@drawable/media_start_light</item>
 		<item name="media_button_stop">@drawable/media_stop_light</item>
+		<item name="media_button_temp">@drawable/ic_baseline_help_outline_24</item>
 		<item name="actionbar_backward">@drawable/media_backward_dark</item>
 		<item name="actionbar_forward">@drawable/media_forward_dark</item>
 		<item name="actionbar_pause">@drawable/media_pause_dark</item>
