--- a/app/src/main/res/layout-land/download.xml
+++ b/app/src/main/res/layout-land/download.xml
@@ -8,115 +8,124 @@
 	<ViewFlipper
 		android:id="@+id/download_playlist_flipper"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:layout_weight="1">
+		android:layout_weight="1"
+		android:layout_height="match_parent">
 
 		<xyz.slapelachie.supersonic.view.RecyclingImageView
 			android:id="@+id/download_album_art_image"
-			android:src="@drawable/unknown_album_large"
+			android:src="?attr/unknownAlbum"
 			android:layout_width="wrap_content"
 			android:layout_height="match_parent"
-			android:layout_weight="1"
 			android:scaleType="fitCenter"/>
 
 		<include layout="@layout/download_playlist"/>
 
 	</ViewFlipper>
 
-	<RelativeLayout
+	<LinearLayout
 		android:id="@+id/download_control_layout"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
 		android:layout_weight="1"
+        android:orientation="vertical"
 		android:background="@android:color/transparent">
 
-		<LinearLayout
-			android:id="@+id/download_other_controls_wrapper"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_centerHorizontal="true"
-			android:layout_above="@+id/download_song_title">
+		<Space
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_weight="5"/>
 
-			<LinearLayout
-				android:id="@+id/download_other_controls_layout"
-				android:orientation="horizontal"
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_weight="2"
+			android:gravity="center"
+			android:orientation="vertical">
+
+			<TextView
+				android:id="@+id/download_song_title"
+				style="?attr/actionbarTitleStyle"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_gravity="center_horizontal">
-
-				<ImageButton
-					android:id="@+id/download_rating_bad"
-					style="@style/DownloadActionImageButton"
-					android:src="?attr/rating_bad"/>
-
-				<ImageButton
-					android:id="@+id/download_star"
-					style="@style/DownloadActionImageButton"
-					android:src="@android:drawable/star_big_off"/>
-
-				<ImageButton
-					android:id="@+id/download_playback_speed"
-					style="@style/DownloadActionImageButton"
-					android:src="?attr/playback_speed"/>
-
-				<ImageButton
-					android:id="@+id/download_bookmark"
-					style="@style/DownloadActionImageButton"
-					android:src="?attr/bookmark"/>
-
-				<ImageButton
-					android:id="@+id/download_rating_good"
-					style="@style/DownloadActionImageButton"
-					android:src="?attr/rating_good"/>
-			</LinearLayout>
-		</LinearLayout>
-
-		<TextView
-				android:id="@+id/download_song_title"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_centerHorizontal="true"
-				android:layout_marginLeft="12dip"
-				android:layout_marginRight="12dip"
+				android:layout_gravity="center_horizontal"
+				android:layout_marginBottom="3dp"
 				android:singleLine="true"
-				android:ellipsize="end"
-				android:gravity="center_horizontal"
-				android:textAppearance="?android:attr/textAppearanceMedium"
 				android:textColor="?android:textColorPrimary"
-				android:layout_above="@+id/download_status"/>
+				android:textStyle="bold" />
 
-		<TextView
+			<TextView
 				android:id="@+id/download_status"
-				android:layout_width="fill_parent"
+				style="?attr/actionbarSubtitleStyle"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:gravity="center_horizontal"
-				android:layout_marginBottom="8dip"
-				android:layout_marginLeft="12dip"
-				android:layout_marginRight="12dip"
-				android:singleLine="true"
+				android:layout_gravity="center_horizontal"
+				android:layout_marginTop="3dp"
 				android:ellipsize="end"
-				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:singleLine="true"
+				android:textColor="?android:textColorSecondary" />
+		</LinearLayout>
+
+		<include
+			layout="@layout/download_slider"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_weight="1" />
+
+		<include
+			layout="@layout/download_media_buttons"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_weight="3" />
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_marginBottom="16dp"
+			android:layout_weight="1"
+			android:gravity="center_horizontal"
+			android:orientation="horizontal">
+
+			<ImageButton
+				android:id="@+id/download_toggle_list2"
+				style="@style/PlaybackControl"
+				android:layout_width="0dp"
+				android:layout_gravity="start|center_vertical"
+				android:layout_weight="1"
+				android:layout_height="40dp"
+				android:src="?attr/media_button_temp" />
+
+			<Space
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
+				android:layout_weight="1"/>
+
+			<TextView
+				android:id="@+id/download_position_index"
+				style="?attr/actionbarSubtitleStyle"
+				android:layout_width="0dp"
+				android:layout_height="fill_parent"
+				android:gravity="center"
+				android:layout_weight="1"
 				android:textColor="?android:textColorSecondary"
-				android:layout_above="@+id/download_media_buttons_wrapper"/>
+				android:textStyle="bold" />
 
-		<LinearLayout
-			android:id="@+id/download_media_buttons_wrapper"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_above="@+id/download_slider_wrapper">
+			<Space
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
+				android:layout_weight="1"/>
 
-			<include layout="@layout/download_media_buttons"/>
+			<ImageButton
+				android:id="@+id/download_toggle_list"
+				style="@style/PlaybackControl"
+				android:layout_width="0dp"
+				android:layout_gravity="end|center_vertical"
+				android:layout_height="40dp"
+				android:layout_weight="1"
+				android:src="@drawable/action_toggle_list_dark" />
+
 		</LinearLayout>
 
-		<LinearLayout
-			android:id="@+id/download_slider_wrapper"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_alignParentBottom="true">
 
-			<include layout="@layout/download_slider"/>
-		</LinearLayout>
-
-	</RelativeLayout>
+	</LinearLayout>
 
 </LinearLayout>
