--- a/app/src/main/res/layout/abstract_fragment_activity.xml
+++ b/app/src/main/res/layout/abstract_fragment_activity.xml
@@ -1,147 +1,155 @@
-<com.sothree.slidinguppanel.SlidingUpPanelLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:sothree="http://schemas.android.com/apk/res-auto"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/slide_up_panel"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:gravity="bottom"
-	sothree:umanoPanelHeight="?attr/actionBarSize"
-	sothree:umanoShadowHeight="4dp"
-	sothree:umanoDragView="@+id/slide_up_swipe_target">
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/slide_up_panel"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="bottom"
+    sothree:umanoDragView="@+id/slide_up_swipe_target"
+    sothree:umanoPanelHeight="?attr/actionBarSize"
+    sothree:umanoShadowHeight="4dp">
 
-	<FrameLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-		<androidx.appcompat.widget.Toolbar
-			android:id="@+id/main_toolbar"
-			android:layout_height="?attr/actionBarSize"
-			android:layout_width="match_parent"
-			android:background="?attr/actionbarBackgroundColor"
-			android:elevation="4dp"
-			android:theme="?attr/actionbarThemeStyle"
-			app:popupTheme="?attr/actionbarPopupStyle"/>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/actionbarBackgroundColor"
+            android:elevation="4dp"
+            android:theme="?attr/actionbarThemeStyle"
+            app:popupTheme="?attr/actionbarPopupStyle" />
 
-		<include layout="@layout/abstract_fragment_container"/>
-	</FrameLayout>
+        <include layout="@layout/abstract_fragment_container" />
+    </FrameLayout>
 
-	<LinearLayout
-		android:id="@+id/slide_up_frame"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/slide_up_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-		<FrameLayout
-			android:id="@+id/slide_up_swipe_target"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:background="?attr/actionbarBackgroundColor">
+        <FrameLayout
+            android:id="@+id/slide_up_swipe_target"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/actionbarBackgroundColor">
 
-			<androidx.appcompat.widget.Toolbar
-				android:id="@+id/now_playing_toolbar"
-				android:layout_height="?attr/actionBarSize"
-				android:layout_width="match_parent"
-				android:elevation="4dp"
-				android:visibility="gone"
-				android:theme="?attr/actionbarThemeStyle"
-				app:popupTheme="?attr/actionbarPopupStyle"/>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/now_playing_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:elevation="4dp"
+                android:theme="?attr/actionbarThemeStyle"
+                android:visibility="gone"
+                app:popupTheme="?attr/actionbarPopupStyle" />
 
-			<LinearLayout
-				android:id="@+id/bottom_bar"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				style="@style/BasicButton"
-				android:orientation="horizontal"
-				android:elevation="4dp">
+            <LinearLayout
+                android:id="@+id/bottom_bar"
+                style="@style/BasicButton"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:elevation="4dp"
+                android:orientation="horizontal">
 
-				<xyz.slapelachie.supersonic.view.RecyclingImageView
-					android:id="@+id/album_art"
-					android:layout_width="?attr/actionBarSize"
-					android:layout_height="?attr/actionBarSize"
-					android:layout_gravity="left|center"
-					android:scaleType="fitCenter"/>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="60dp"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="start|center_vertical"
+                    android:paddingLeft="6dip"
+                    android:paddingRight="6dip">
 
-				<LinearLayout
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center_vertical"
-					android:layout_weight="1"
-					android:orientation="vertical"
-					android:paddingLeft="8dip">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
 
-					<TextView
-						android:id="@+id/track_name"
-						android:layout_height="wrap_content"
-						android:layout_width="wrap_content"
-						android:singleLine="true"
-						android:text="@string/main.title"
-						android:ellipsize="marquee"
-						android:marqueeRepeatLimit="marquee_forever"
-						android:scrollHorizontally="true"
-						android:focusable="true"
-						android:focusableInTouchMode="true"
-						style="?attr/actionbarTitleStyle">
+                        app:cardCornerRadius="5dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintDimensionRatio="1:1"
+                        app:layout_constraintHeight_default="percent"
 
-						<requestFocus android:focusable="true"
-							android:focusableInTouchMode="true"
-							android:duplicateParentState="true" />
-					</TextView>
+                        app:layout_constraintHeight_percent=".8"
+                        app:layout_constraintLeft_toLeftOf="parent"
 
-					<TextView
-						android:id="@+id/artist_name"
-						android:layout_height="wrap_content"
-						android:layout_width="wrap_content"
-						android:singleLine="true"
-						android:text="@string/main.artist"
-						style="?attr/actionbarSubtitleStyle"/>
-				</LinearLayout>
+                        app:layout_constraintRight_toRightOf="parent"
+
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <xyz.slapelachie.supersonic.view.RecyclingImageView
+                            android:id="@+id/album_art"
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent"
+                            android:scaleType="fitCenter"
+                            android:src="?attr/unknownAlbum" />
+
+                    </androidx.cardview.widget.CardView>
 
 
-				<LinearLayout
-					android:layout_height="fill_parent"
-					android:layout_width="0dp"
-					android:layout_weight="1">
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-					<ImageButton
-						style="@style/PlaybackControl.BottomBar"
-						android:id="@+id/download_rewind"
-						android:src="?attr/actionbar_rewind"
-						android:padding="2dp"
-						android:visibility="gone"/>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    >
 
-					<ImageButton
-						style="@style/PlaybackControl.BottomBar"
-						android:id="@+id/download_previous"
-						android:src="?attr/actionbar_backward"
-						android:padding="2dp"/>
+                    <TextView
+                        android:id="@+id/track_name"
+                        style="?attr/actionbarTitleStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:ellipsize="marquee"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:scrollHorizontally="true"
+                        android:singleLine="true"
+                        android:text="@string/main.title">
 
-					<ImageButton
-						style="@style/PlaybackControl.BottomBar"
-						android:id="@+id/download_start"
-						android:src="?attr/actionbar_start"/>
+                        <requestFocus
+                            android:duplicateParentState="true"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true" />
+                    </TextView>
 
-					<ImageButton
-						style="@style/PlaybackControl.BottomBar"
-						android:id="@+id/download_next"
-						android:src="?attr/actionbar_forward"
-						android:padding="2dp"/>
+                    <TextView
+                        android:id="@+id/artist_name"
+                        style="?attr/actionbarSubtitleStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:singleLine="true"
+                        android:text="@string/main.artist" />
+                </LinearLayout>
 
-					<ImageButton
-						style="@style/PlaybackControl.BottomBar"
-						android:id="@+id/download_fastforward"
-						android:src="?attr/actionbar_fastforward"
-						android:padding="2dp"
-						android:visibility="gone"/>
-				</LinearLayout>
-			</LinearLayout>
-		</FrameLayout>
 
-		<FrameLayout
-					android:id="@+id/now_playing_fragment_container"
-					android:layout_width="match_parent"
-					android:layout_height="0dp"
-					android:layout_weight="1"
-					android:clickable="true"/>
-	</LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    >
+
+
+                    <ImageButton
+                        android:id="@+id/download_start"
+                        style="@style/PlaybackControl.BottomBar"
+                        android:layout_height="40dp"
+                        android:layout_gravity="end|center_vertical"
+                        android:src="?attr/actionbar_start" />
+
+                </LinearLayout>
+            </LinearLayout>
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/now_playing_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:clickable="true" />
+    </LinearLayout>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
