--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -13,6 +13,9 @@
 	<style name="Theme.DSub.Holo" parent="Theme.DSub.Holo.Base">
 		<item name="android:windowTranslucentStatus">true</item>
 	</style>
+	<style name="Theme.Supersonic.Tako" parent="Theme.Supersonic.Tako.Base">
+		<item name="android:windowTranslucentStatus">true</item>
+	</style>
 
 	<style name="Theme.DSub.Light.No_Color" parent="Theme.DSub.Light.No_Color.Base">
 		<item name="android:windowTranslucentStatus">false</item>
@@ -27,6 +30,10 @@
 		<item name="android:statusBarColor">@android:color/black</item>
 	</style>
 	<style name="Theme.DSub.Holo.No_Color" parent="Theme.DSub.Holo.No_Color.Base">
+		<item name="android:windowTranslucentStatus">false</item>
+		<item name="android:statusBarColor">@android:color/black</item>
+	</style>
+	<style name="Theme.Supersonic.Tako.No_Color" parent="Theme.Supersonic.Tako.No_Color.Base">
 		<item name="android:windowTranslucentStatus">false</item>
 		<item name="android:statusBarColor">@android:color/black</item>
 	</style>
